syntax = "proto3";

option java_multiple_files = true;
package com.quoctk.grpc.rps;

// Định nghĩa kiểu BInteger trong gRPC
message BInteger {
	bytes value = 1;
}

message User {
	string username = 1;
    string password = 2;
}

message TopPlayers {
	string username = 1;
   	double winRating = 2;
}

message ListTopPlayers {
	repeated TopPlayers listTopPlayers = 1;
}

message GameInfo {
	BInteger gameID = 1;
	int32 gameResult = 2;
	string startDate = 3;
	string username = 4;
}

message ListGameInfo {
	repeated GameInfo listGameInfo = 1;
}

message GameTurnInfo {
	BInteger turnID = 1;
	int32 userResult = 2;
	int32 machineResult = 3;
	string turnDate = 4;
	BInteger gameID = 5;
	int32 turnType = 6;
}

message ListGameTurnInfo {
	repeated GameTurnInfo listGameTurnInfo = 1;
}

message GameHistory {
	GameInfo gameInfo = 1;
	ListGameTurnInfo listGameTurnInfo = 2;
}

message ListGameHistory {
	repeated GameHistory listGameHistory = 1;
}

message GameRequest {
	User user = 1;
	int32 choose = 2;
}

message GameResponse {
	BInteger gameID = 1;
	int32 gameResult = 2;
	string gameStartDate = 3;
	int32 userResult = 4;
	int32 machineResult = 5;
	string turnDate = 6;
	int32 turnType = 7;
}

service GameService {
    rpc GetTopPlayers (User) returns (ListTopPlayers);
    rpc GetGameHistory (User) returns (ListGameHistory);
    rpc PlayGame (GameRequest) returns (GameResponse);
}
